2022-08-10 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/include/stdbit.h:
	  Fix bit and byte utilities find first leading bit functions for ports that don't have _BitInt yet.

2022-08-10 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* doc/sdccman.lyx,
	  src/SDCC.y:
	  Document intentional deviation from C2X draft N3047 rules for tag compatibility for unions.

2022-08-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c:
	  Fix handling of pointers to short, long and long long (without explicit int) in _Generic associations.
	* device/include/stdckdint.h,
	  device/lib/incl.mk,
	  device/lib/ckd_add.c,
	  device/lib/ckd_mul.c,
	  device/lib/ckd_sub.c,
	  doc/sdccman.lyx,
	  .version:
	  Checked integer arithmetic for all types except (unsigned) long long, part of RFE #749.

2022-08-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y,
	  .version,
	  support/valdiag/tests/enum.c:
	  C2X enum tag compatibility rules, RFE #852.

2022-08-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/valdiag/tests/struct.c:
	  C2X struct / union tag compatibility rules, part of RFE #852.

2022-08-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/include/stdlib.h,
	  device/lib/incl.mk,
	  device/lib/call_once.c:
	  call_once, RFE #777.

2022-08-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/include/stdbit.h,
	  device/lib/incl.mk,
	  device/lib/__stdc_first_leading_one.c,
	  support/regression/tests/bitfirstleading.c.in:
	  Provide bit and byte utilities find first leading bit functions. RFE #854.

2022-08-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/include/stdbit.h,
	  device/lib/incl.mk,
	  device/lib/__stdc_count_leading_zeros.c,