@@ -36,7 +36,7 @@ extern int TBLPTRU;
 /* external reference to the user's main routine */
 extern void main (void);
 
-void _entry (void) __naked __interrupt 0;
+void _entry (void) __naked __interrupt (0);
 void _startup (void) __naked;
 
 /* Access bank selector. */
@@ -47,7 +47,7 @@ void _startup (void) __naked;
  * entry function, placed at interrupt vector 0 (RESET)
  */
 void
-_entry (void) __naked __interrupt 0
+_entry (void) __naked __interrupt (0)
 {
   __asm
     goto    __startup
